--- a/index.html
+++ b/index.html
@@ -132,25 +132,21 @@
                 <div class="col-lg-12 text-center">
                     <h2>Marketplace</h2>
                     <hr class="star-primary">
-                </div>
-            </div>
-            	<form class="navbar-form" role="search">
+			<form class="navbar-form" role="search">
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Search">
+						<input type="text" class="form-control" placeholder="Search...">
 						<span class="input-group-btn">
-							<button type="reset" class="btn btn-default">
-								<span class="glyphicon glyphicon-remove">
-									<span class="sr-only">Close</span>
-								</span>
-							</button>
 							<button type="submit" class="btn btn-default">
 								<span class="glyphicon glyphicon-search">
-									<span class="sr-only">Search</span>
+									<span class="sr-only">Search...</span>
 								</span>
 							</button>
 						</span>
 					</div>
 				</form>
+                </div>
+            </div>
+            	
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
