--- a/index.html
+++ b/index.html
@@ -132,21 +132,15 @@
                 <div class="col-lg-12 text-center">
                     <h2>Marketplace</h2>
                     <hr class="star-primary">
-			<form class="navbar-form" role="search">
-					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Search...">
-						<span class="input-group-btn">
-							<button type="submit" class="btn btn-default">
-								<span class="glyphicon glyphicon-search">
-									<span class="sr-only">Search...</span>
-								</span>
-							</button>
-						</span>
-					</div>
-				</form>
-                </div>
+		</div>
             </div>
-            	
+             <div class="row control-group">
+                            <div class="form-group col-xs-12 floating-label-form-group controls">
+                                <label>Search</label>
+                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
