--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
+	    <form class="navbar-form navbar-left" role="search">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="Search">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -136,13 +142,6 @@
             </div>
              
             <div class="row">
-		    <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Search</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
