--- a/index.html
+++ b/index.html
@@ -62,14 +62,7 @@
                 </ul>
             </div>
 		<div class="col-sm-3 col-md-3 pull-right">
-        <form class="navbar-form" role="search">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-            <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
-        </div>
-        </form>
+        
         </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><p class="navbar-text">Already have an account?</p></li>
@@ -143,6 +136,18 @@
                 <div class="col-lg-12 text-center">
                     <h2>Marketplace</h2>
                     <hr class="star-primary">
+					<form class="navbar-form" role="search">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Search...">
+						<span class="input-group-btn">
+							<button type="submit" class="btn btn-default">
+								<span class="glyphicon glyphicon-search">
+									<span class="sr-only">Search...</span>
+								</span>
+							</button>
+						</span>
+					</div>
+				</form>
 		</div>
             </div>
              
