--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
                                 <div class="bottom text-center">
                                     New here ? <a href="#"><b>Join Us</b></a>
                                 </div>
+								<form role="form">
+			    			<div class="row">
+			    				<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			                <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
+			    					</div>
+			    				</div>
+			    				<div class="col-xs-6 col-sm-6 col-md-6">
+			    					<div class="form-group">
+			    						<input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
+			    					</div>
+			    				</div>
+			    			</div>
+
+			    			<div class="form-group">
+			    				<input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+			    			</div>
+
+	    			    <input type="submit" value="Register"  style="background-color:#efc660"class="btn btn-info btn-block">
+			    		
+			    		</form>
                             </div>
                         </li>
                     </ul>
